--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="https://shadowlefty.github.io/UA/ua-logo.png" />
+  <meta property="og:title" content="U.A. High School – Prova Teórica" />
+  <meta property="og:description" content="Prova oficial do Curso de Formação de Heróis – Setor de Avaliação da U.A. High School." />
+  <meta property="og:url" content="https://shadowlefty.github.io/UA/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://shadowlefty.github.io/UA/ua-card.png" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="theme-color" content="#00ff9d" />
   <title>U.A. High School – Prova Teórica</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -426,3 +437,4 @@
   </main>
 </body>
 </html>
+
