--- a/home.html
+++ b/home.html
@@ -2,6 +2,14 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
+  <meta property="og:title" content="U.A. High School – Painel Inicial" />
+<meta property="og:description" content="Bem-vindo à U.A. High School — acesse inscrições, provas, resultados e corpo docente." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://shadowlefty.github.io/UA/home.html" />
+<meta property="og:image" content="https://shadowlefty.github.io/UA/ua-card.png" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+<meta name="theme-color" content="#00ff9d" />
   <title>U.A. High School – Página Inicial</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -213,3 +221,4 @@
 
 </body>
 </html>
+
