--- a/home.html
+++ b/home.html
@@ -2,10 +2,10 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta property="og:title" content="U.A. High School – Painel Inicial" />
-<meta property="og:description" content="Bem-vindo à U.A. High School — acesse inscrições, provas, resultados e corpo docente." />
+<meta property="og:title" content="U.A. High School – Prova Teórica" />
+<meta property="og:description" content="Prova oficial do Curso de Formação de Heróis – Setor de Avaliação da U.A. High School." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://shadowlefty.github.io/UA/home.html" />
+<meta property="og:url" content="https://shadowlefty.github.io/UA/index.html" />
 <meta property="og:image" content="https://shadowlefty.github.io/UA/ua-card.png" />
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="630" />
@@ -221,4 +221,5 @@
 
 </body>
 </html>
+
 
