--- a/home.html
+++ b/home.html
@@ -2,14 +2,14 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
+<!-- OG: Preview no Discord -->
 <meta property="og:title" content="U.A. High School – Prova Teórica" />
-<meta property="og:description" content="Prova oficial do Curso de Formação de Heróis – Setor de Avaliação da U.A. High School." />
+<meta property="og:description" content="Prova oficial da U.A. High School — Setor de Avaliação da 2ª Etapa." />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://shadowlefty.github.io/UA/index.html" />
-<meta property="og:image" content="https://shadowlefty.github.io/UA/ua-card.png" />
-<meta property="og:image:width" content="1200" />
-<meta property="og:image:height" content="630" />
+<meta property="og:image" content="https://i.pinimg.com/736x/97/35/e4/9735e462e50adecd6ad4b831008b34a8.jpg" />
 <meta name="theme-color" content="#00ff9d" />
+
   <title>U.A. High School – Página Inicial</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -221,5 +221,6 @@
 
 </body>
 </html>
+
 
 
