--- a/home.html
+++ b/home.html
@@ -9,6 +9,7 @@
 <meta property="og:url" content="https://shadowlefty.github.io/UA/index.html" />
 <meta property="og:image" content="https://i.pinimg.com/736x/97/35/e4/9735e462e50adecd6ad4b831008b34a8.jpg" />
 <meta name="theme-color" content="#00ff9d" />
+<link rel="icon" type="image/png" href="https://i.pinimg.com/736x/e8/57/3f/e8573fed4bd848b566383b0f0aa3b6fe.jpg" />
 
   <title>U.A. High School – Página Inicial</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -221,6 +222,7 @@
 
 </body>
 </html>
+
 
 
 
