--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
+	<meta property="og:title" content="U.A. High School – Prova Teórica" />
+<meta property="og:description" content="Prova oficial da U.A. High School — Setor de Avaliação da 2ª Etapa." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://shadowlefty.github.io/UA/index.html" />
+<meta property="og:image" content="https://i.pinimg.com/736x/97/35/e4/9735e462e50adecd6ad4b831008b34a8.jpg" />
+<meta name="theme-color" content="#00ff9d" />
+<link rel="icon" type="image/png" href="https://i.pinimg.com/736x/e8/57/3f/e8573fed4bd848b566383b0f0aa3b6fe.jpg" />
   <title>U.A. High School – Prova Teórica</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -427,3 +434,4 @@
   </main>
 </body>
 </html>
+
