--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="theme-color" content="#00ff9d" />
 
   <!-- Favicon da aba -->
-  <link rel="icon" type="image/png" href="ua-logo.png" />
+  <link rel="icon" type="image/png" href="https://i.pinimg.com/736x/e8/57/3f/e8573fed4bd848b566383b0f0aa3b6fe.jpg" />
   <title>U.A. High School – Prova Teórica</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -436,5 +436,6 @@
   </main>
 </body>
 </html>
+
 
 
